alan pls update your server

--- a/config/Undead_mobs.toml
+++ b/config/Undead_mobs.toml
@@ -37,3 +37,17 @@
 	#default at 5
 	"How many suckers spawn per Big Sucker?" = 5.0
 
+["The Wolf"]
+	#They usaully spawn blade like mobs to attack target
+	"Can the wolf spawn stroms" = true
+	#Somehow it cant be chnaged via attributes so here it is. (exclusively for this mob)
+	"The wolf swinging attack Damage" = 4.0
+
+["The Lechery"]
+	#This has to do with world ore generation
+	"Do Lechery spawn as ore blocks" = true
+
+["The Dungeon"]
+	#Can The Dungeon mob and its structures spawn in thiss world?
+	"Enable or Disabling dungeons" = true
+
