--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -79,7 +79,6 @@ Stone Zone
 Immersive Aircraft
 Mighty Mail
 Pigsteel Mod
-Rediscovered
 Scorched Guns
 Scorched Guns Brass
 Upgrade Aquatic
@@ -140,3 +139,7 @@ Lava Monster
 Hamsters
 Gobber 2
 Gobber Delight
+Apple Cows
+Even Better Nether
+Galospheric Delight
+All Da Nuggets
