--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -56,3 +56,4 @@ ars_nouveau:scry_ritual
 legendarysurvivaloverhaul:sewing
 species:cruncher_pellet
 species:goober_goo
+galospheric_delight:azalea_petals
