--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -5539,6 +5539,333 @@ plenty_of_golems\:step_1=true
 plenty_of_golems\:step_2=true
 plenty_of_golems\:step_3=true
 plenty_of_golems\:stomp=true
+prehistoricfauna\:acipenser_death=true
+prehistoricfauna\:acipenser_hurt=true
+prehistoricfauna\:aepyornithomimus_death=true
+prehistoricfauna\:aepyornithomimus_hurt=true
+prehistoricfauna\:aepyornithomimus_idle=true
+prehistoricfauna\:allosaurus_bite=true
+prehistoricfauna\:allosaurus_death=true
+prehistoricfauna\:allosaurus_hurt=true
+prehistoricfauna\:allosaurus_idle=true
+prehistoricfauna\:allosaurus_snores=true
+prehistoricfauna\:allosaurus_warn=true
+prehistoricfauna\:ambience_1=true
+prehistoricfauna\:anklyosaurus_idle=true
+prehistoricfauna\:ankylosaurus_death=true
+prehistoricfauna\:ankylosaurus_hurt=true
+prehistoricfauna\:ankylosaurus_snores=true
+prehistoricfauna\:ankylosaurus_warn=true
+prehistoricfauna\:anzu_death=true
+prehistoricfauna\:anzu_hurt=true
+prehistoricfauna\:anzu_idle=true
+prehistoricfauna\:anzu_warn=true
+prehistoricfauna\:arganodus_death=true
+prehistoricfauna\:arganodus_hurt=true
+prehistoricfauna\:basilemys_death=true
+prehistoricfauna\:basilemys_hurt=true
+prehistoricfauna\:basilemys_idle=true
+prehistoricfauna\:beipiaosaurus_death=true
+prehistoricfauna\:beipiaosaurus_hurt=true
+prehistoricfauna\:beipiaosaurus_idle=true
+prehistoricfauna\:beipiaosaurus_warn=true
+prehistoricfauna\:boss_bite=true
+prehistoricfauna\:boss_bite_all=true
+prehistoricfauna\:boss_death=true
+prehistoricfauna\:boss_hurt=true
+prehistoricfauna\:boss_idle=true
+prehistoricfauna\:boss_roar=true
+prehistoricfauna\:boss_speech=true
+prehistoricfauna\:boss_walk=true
+prehistoricfauna\:brachychampsa_death=true
+prehistoricfauna\:brachychampsa_hurt=true
+prehistoricfauna\:brachychampsa_idle=true
+prehistoricfauna\:brachychampsa_warn=true
+prehistoricfauna\:byronosaurus_death=true
+prehistoricfauna\:byronosaurus_hurt=true
+prehistoricfauna\:byronosaurus_idle=true
+prehistoricfauna\:byronosaurus_warn=true
+prehistoricfauna\:calsoyasuchus_death=true
+prehistoricfauna\:calsoyasuchus_hurt=true
+prehistoricfauna\:calsoyasuchus_idle=true
+prehistoricfauna\:calsoyasuchus_warn=true
+prehistoricfauna\:camarasaurus_death=true
+prehistoricfauna\:camarasaurus_hurt=true
+prehistoricfauna\:camarasaurus_idle=true
+prehistoricfauna\:camarasaurus_snores=true
+prehistoricfauna\:camarasaurus_warn=true
+prehistoricfauna\:cave_1=true
+prehistoricfauna\:ceratodus_death=true
+prehistoricfauna\:ceratodus_hurt=true
+prehistoricfauna\:ceratosaurus_bite=true
+prehistoricfauna\:ceratosaurus_death=true
+prehistoricfauna\:ceratosaurus_hurt=true
+prehistoricfauna\:ceratosaurus_idle=true
+prehistoricfauna\:ceratosaurus_warn=true
+prehistoricfauna\:changyuraptor_death=true
+prehistoricfauna\:changyuraptor_hurt=true
+prehistoricfauna\:changyuraptor_idle=true
+prehistoricfauna\:chinlea_death=true
+prehistoricfauna\:chinlea_hurt=true
+prehistoricfauna\:chromogisaurus_death=true
+prehistoricfauna\:chromogisaurus_hurt=true
+prehistoricfauna\:chromogisaurus_idle=true
+prehistoricfauna\:citipati_death=true
+prehistoricfauna\:citipati_hurt=true
+prehistoricfauna\:citipati_idle=true
+prehistoricfauna\:citipati_warn=true
+prehistoricfauna\:coelophysis_death=true
+prehistoricfauna\:coelophysis_hurt=true
+prehistoricfauna\:coelophysis_idle=true
+prehistoricfauna\:coelophysis_warn=true
+prehistoricfauna\:cyclurus_death=true
+prehistoricfauna\:cyclurus_hurt=true
+prehistoricfauna\:dakotaraptor_death=true
+prehistoricfauna\:dakotaraptor_hurt=true
+prehistoricfauna\:dakotaraptor_idle=true
+prehistoricfauna\:dakotaraptor_warn=true
+prehistoricfauna\:desmatosuchus_death=true
+prehistoricfauna\:desmatosuchus_hurt=true
+prehistoricfauna\:desmatosuchus_idle=true
+prehistoricfauna\:desmatosuchus_warn=true
+prehistoricfauna\:didelphodon_death=true
+prehistoricfauna\:didelphodon_hurt=true
+prehistoricfauna\:didelphodon_idle=true
+prehistoricfauna\:dilong_death=true
+prehistoricfauna\:dilong_hurt=true
+prehistoricfauna\:dilong_idle=true
+prehistoricfauna\:dilong_warn=true
+prehistoricfauna\:dilophosaurus_bite=true
+prehistoricfauna\:dilophosaurus_death=true
+prehistoricfauna\:dilophosaurus_hurt=true
+prehistoricfauna\:dilophosaurus_idle=true
+prehistoricfauna\:dilophosaurus_warn=true
+prehistoricfauna\:dongbeititan_death=true
+prehistoricfauna\:dongbeititan_hurt=true
+prehistoricfauna\:dongbeititan_idle=true
+prehistoricfauna\:dongbeititan_snores=true
+prehistoricfauna\:dongbeititan_warn=true
+prehistoricfauna\:dryosaurus_death=true
+prehistoricfauna\:dryosaurus_hurt=true
+prehistoricfauna\:dryosaurus_idle=true
+prehistoricfauna\:edmontosaurus_death=true
+prehistoricfauna\:edmontosaurus_hurt=true
+prehistoricfauna\:edmontosaurus_idle=true
+prehistoricfauna\:edmontosaurus_warn=true
+prehistoricfauna\:eilenodon_death=true
+prehistoricfauna\:eilenodon_hurt=true
+prehistoricfauna\:exaeretodon_death=true
+prehistoricfauna\:exaeretodon_hurt=true
+prehistoricfauna\:exaeretodon_idle=true
+prehistoricfauna\:exaeretodon_warn=true
+prehistoricfauna\:fish_flop=true
+prehistoricfauna\:gar_death=true
+prehistoricfauna\:gar_hurt=true
+prehistoricfauna\:goyocephale_death=true
+prehistoricfauna\:goyocephale_hurt=true
+prehistoricfauna\:goyocephale_idle=true
+prehistoricfauna\:halszkaraptor_death=true
+prehistoricfauna\:halszkaraptor_hurt=true
+prehistoricfauna\:halszkaraptor_idle=true
+prehistoricfauna\:harenaichthys_death=true
+prehistoricfauna\:harenaichthys_hurt=true
+prehistoricfauna\:henos_death=true
+prehistoricfauna\:henos_hurt=true
+prehistoricfauna\:henos_idle=true
+prehistoricfauna\:henos_laser=true
+prehistoricfauna\:henos_laser_loop=true
+prehistoricfauna\:herrerasaurus_bite=true
+prehistoricfauna\:herrerasaurus_death=true
+prehistoricfauna\:herrerasaurus_hurt=true
+prehistoricfauna\:herrerasaurus_idle=true
+prehistoricfauna\:herrerasaurus_warn=true
+prehistoricfauna\:hesperornithoides_death=true
+prehistoricfauna\:hesperornithoides_hurt=true
+prehistoricfauna\:hesperornithoides_idle=true
+prehistoricfauna\:hyperodapedon_death=true
+prehistoricfauna\:hyperodapedon_hurt=true
+prehistoricfauna\:hyperodapedon_idle=true
+prehistoricfauna\:incisivosaurus_death=true
+prehistoricfauna\:incisivosaurus_hurt=true
+prehistoricfauna\:incisivosaurus_idle=true
+prehistoricfauna\:ischigualastia_death=true
+prehistoricfauna\:ischigualastia_hurt=true
+prehistoricfauna\:ischigualastia_idle=true
+prehistoricfauna\:ischigualastia_warn=true
+prehistoricfauna\:jinzhousaurus_death=true
+prehistoricfauna\:jinzhousaurus_hurt=true
+prehistoricfauna\:jinzhousaurus_idle=true
+prehistoricfauna\:jinzhousaurus_warn=true
+prehistoricfauna\:kayentatherium_death=true
+prehistoricfauna\:kayentatherium_hurt=true
+prehistoricfauna\:kayentatherium_idle=true
+prehistoricfauna\:kol_death=true
+prehistoricfauna\:kol_hurt=true
+prehistoricfauna\:kol_idle=true
+prehistoricfauna\:large_meat_gulp=true
+prehistoricfauna\:liaonemobius_hop=true
+prehistoricfauna\:liaonemobius_idle=true
+prehistoricfauna\:liaoningosaurus_death=true
+prehistoricfauna\:liaoningosaurus_hurt=true
+prehistoricfauna\:liaoningosaurus_idle=true
+prehistoricfauna\:liaoningosaurus_warn=true
+prehistoricfauna\:lonchidion_death=true
+prehistoricfauna\:lonchidion_hurt=true
+prehistoricfauna\:meat_eating=true
+prehistoricfauna\:megapnosaurus_death=true
+prehistoricfauna\:megapnosaurus_hurt=true
+prehistoricfauna\:megapnosaurus_idle=true
+prehistoricfauna\:megapnosaurus_warn=true
+prehistoricfauna\:melvius_death=true
+prehistoricfauna\:melvius_hurt=true
+prehistoricfauna\:mooreodontus_death=true
+prehistoricfauna\:mooreodontus_hurt=true
+prehistoricfauna\:myledaphus_death=true
+prehistoricfauna\:myledaphus_hurt=true
+prehistoricfauna\:night_1=true
+prehistoricfauna\:night_2=true
+prehistoricfauna\:ornithomimus_death=true
+prehistoricfauna\:ornithomimus_hurt=true
+prehistoricfauna\:ornithomimus_idle=true
+prehistoricfauna\:ornithomimus_warn=true
+prehistoricfauna\:oviraptor_death=true
+prehistoricfauna\:oviraptor_hurt=true
+prehistoricfauna\:oviraptor_idle=true
+prehistoricfauna\:pachycephalosaurus_death=true
+prehistoricfauna\:pachycephalosaurus_hurt=true
+prehistoricfauna\:pachycephalosaurus_idle=true
+prehistoricfauna\:pachycephalosaurus_warn=true
+prehistoricfauna\:palaeosaniwa_death=true
+prehistoricfauna\:palaeosaniwa_hurt=true
+prehistoricfauna\:palaeosaniwa_idle=true
+prehistoricfauna\:palaeosaniwa_warn=true
+prehistoricfauna\:parapsephurus_death=true
+prehistoricfauna\:parapsephurus_hurt=true
+prehistoricfauna\:pinacosaurus_death=true
+prehistoricfauna\:pinacosaurus_hurt=true
+prehistoricfauna\:pinacosaurus_idle=true
+prehistoricfauna\:pinacosaurus_warning=true
+prehistoricfauna\:placerias_death=true
+prehistoricfauna\:placerias_hurt=true
+prehistoricfauna\:placerias_idle=true
+prehistoricfauna\:placerias_warn=true
+prehistoricfauna\:plesiohadros_death=true
+prehistoricfauna\:plesiohadros_hurt=true
+prehistoricfauna\:plesiohadros_idle=true
+prehistoricfauna\:plesiohadros_warning=true
+prehistoricfauna\:poposaurus_bite=true
+prehistoricfauna\:poposaurus_death=true
+prehistoricfauna\:poposaurus_hurt=true
+prehistoricfauna\:poposaurus_idle=true
+prehistoricfauna\:poposaurus_warn=true
+prehistoricfauna\:portal=true
+prehistoricfauna\:postosuchus_bite=true
+prehistoricfauna\:postosuchus_death=true
+prehistoricfauna\:postosuchus_hurt=true
+prehistoricfauna\:postosuchus_idle=true
+prehistoricfauna\:postosuchus_warn=true
+prehistoricfauna\:potamoceratodus_death=true
+prehistoricfauna\:potamoceratodus_hurt=true
+prehistoricfauna\:protoceratops_death=true
+prehistoricfauna\:protoceratops_hurt=true
+prehistoricfauna\:protoceratops_idle=true
+prehistoricfauna\:protoceratops_warn=true
+prehistoricfauna\:protopsephurus_death=true
+prehistoricfauna\:protopsephurus_hurt=true
+prehistoricfauna\:psittacosaurus_death=true
+prehistoricfauna\:psittacosaurus_hurt=true
+prehistoricfauna\:psittacosaurus_idle=true
+prehistoricfauna\:repenomamus_death=true
+prehistoricfauna\:repenomamus_hurt=true
+prehistoricfauna\:repenomamus_idle=true
+prehistoricfauna\:repenomamus_warn=true
+prehistoricfauna\:ruixinia_death=true
+prehistoricfauna\:ruixinia_hurt=true
+prehistoricfauna\:ruixinia_idle=true
+prehistoricfauna\:ruixinia_snores=true
+prehistoricfauna\:ruixinia_warn=true
+prehistoricfauna\:sarahsaurus_death=true
+prehistoricfauna\:sarahsaurus_hurt=true
+prehistoricfauna\:sarahsaurus_idle=true
+prehistoricfauna\:sarahsaurus_warn=true
+prehistoricfauna\:saurichthys_death=true
+prehistoricfauna\:saurichthys_hurt=true
+prehistoricfauna\:saurosuchus_bite=true
+prehistoricfauna\:saurosuchus_death=true
+prehistoricfauna\:saurosuchus_hurt=true
+prehistoricfauna\:saurosuchus_idle=true
+prehistoricfauna\:saurosuchus_warn=true
+prehistoricfauna\:scelidosaurus_death=true
+prehistoricfauna\:scelidosaurus_hurt=true
+prehistoricfauna\:scelidosaurus_idle=true
+prehistoricfauna\:scelidosaurus_warn=true
+prehistoricfauna\:scutellosaurus_death=true
+prehistoricfauna\:scutellosaurus_hurt=true
+prehistoricfauna\:scutellosaurus_idle=true
+prehistoricfauna\:sillosuchus_death=true
+prehistoricfauna\:sillosuchus_hurt=true
+prehistoricfauna\:sillosuchus_idle=true
+prehistoricfauna\:sillosuchus_snores=true
+prehistoricfauna\:sillosuchus_warn=true
+prehistoricfauna\:sinamia_death=true
+prehistoricfauna\:sinamia_hurt=true
+prehistoricfauna\:sinosauropteryx_death=true
+prehistoricfauna\:sinosauropteryx_hurt=true
+prehistoricfauna\:sinosauropteryx_idle=true
+prehistoricfauna\:sinosauropteryx_warn=true
+prehistoricfauna\:small_meat_gulp=true
+prehistoricfauna\:stegosaurus_death=true
+prehistoricfauna\:stegosaurus_hurt=true
+prehistoricfauna\:stegosaurus_idle=true
+prehistoricfauna\:stegosaurus_snores=true
+prehistoricfauna\:stegosaurus_warn=true
+prehistoricfauna\:structure_1=true
+prehistoricfauna\:telmasaurus_death=true
+prehistoricfauna\:telmasaurus_hurt=true
+prehistoricfauna\:telmasaurus_idle=true
+prehistoricfauna\:thescelosaurus_death=true
+prehistoricfauna\:thescelosaurus_hurt=true
+prehistoricfauna\:thescelosaurus_idle=true
+prehistoricfauna\:thoracosaurus_death=true
+prehistoricfauna\:thoracosaurus_hurt=true
+prehistoricfauna\:thoracosaurus_idle=true
+prehistoricfauna\:thoracosaurus_warn=true
+prehistoricfauna\:triceratops_death=true
+prehistoricfauna\:triceratops_hurt=true
+prehistoricfauna\:triceratops_idle=true
+prehistoricfauna\:triceratops_snores=true
+prehistoricfauna\:triceratops_warn=true
+prehistoricfauna\:trilophosaurus_death=true
+prehistoricfauna\:trilophosaurus_hurt=true
+prehistoricfauna\:trilophosaurus_idle=true
+prehistoricfauna\:typothorax_death=true
+prehistoricfauna\:typothorax_hurt=true
+prehistoricfauna\:typothorax_idle=true
+prehistoricfauna\:tyrannosaurus_bite=true
+prehistoricfauna\:tyrannosaurus_death=true
+prehistoricfauna\:tyrannosaurus_hurt=true
+prehistoricfauna\:tyrannosaurus_idle=true
+prehistoricfauna\:tyrannosaurus_snores=true
+prehistoricfauna\:tyrannosaurus_warn=true
+prehistoricfauna\:udanoceratops_death=true
+prehistoricfauna\:udanoceratops_hurt=true
+prehistoricfauna\:udanoceratops_idle=true
+prehistoricfauna\:udanoceratops_warn=true
+prehistoricfauna\:velociraptor_death=true
+prehistoricfauna\:velociraptor_hurt=true
+prehistoricfauna\:velociraptor_idle=true
+prehistoricfauna\:velociraptor_warn=true
+prehistoricfauna\:yanosteus_death=true
+prehistoricfauna\:yanosteus_hurt=true
+prehistoricfauna\:yutyrannus_bite=true
+prehistoricfauna\:yutyrannus_death=true
+prehistoricfauna\:yutyrannus_hurt=true
+prehistoricfauna\:yutyrannus_idle=true
+prehistoricfauna\:yutyrannus_warn=true
+prehistoricfauna\:zhenyuanlong_death=true
+prehistoricfauna\:zhenyuanlong_hurt=true
+prehistoricfauna\:zhenyuanlong_idle=true
+prehistoricfauna\:zhenyuanlong_warn=true
 psycho\:ambience1=true
 psycho\:ambience2=true
 psycho\:ambience3=true
@@ -7332,6 +7659,7 @@ undead_revamp2\:bomber_ready=true
 undead_revamp2\:bomberambt=true
 undead_revamp2\:bomberded=true
 undead_revamp2\:bomberhurts=true
+undead_revamp2\:bonecrack=true
 undead_revamp2\:clank=true
 undead_revamp2\:clogger_roaring=true
 undead_revamp2\:cloggerambt=true
@@ -7359,6 +7687,10 @@ undead_revamp2\:hunterdying=true
 undead_revamp2\:hunterfoots=true
 undead_revamp2\:hunterhurts=true
 undead_revamp2\:impact=true
+undead_revamp2\:lechery_ambt=true
+undead_revamp2\:lecherycrawl=true
+undead_revamp2\:lecherydies=true
+undead_revamp2\:lecheryhurt=true
 undead_revamp2\:lurkeramb=true
 undead_revamp2\:lurkerdies=true
 undead_revamp2\:lurkerrunning=true
