--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -25,7 +25,10 @@
     "immersive_armors:slime_helmet",
     "immersive_armors:slime_chestplate",
     "immersive_armors:slime_leggings",
-    "immersive_armors:slime_boots"
+    "immersive_armors:slime_boots",
+    "apple_cows:golden_wheat",
+    "apple_cows:enchanted_golden_wheat",
+    "artifacts:bunny_hoppers"
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
